--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,34 +1,59 @@
 # This workflow will build a package using Maven and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#apache-maven-with-a-settings-path
 
-name: Maven Package
+name: Maven Publish
 
 on:
-  release:
-    types: [created]
+
+  push:
+
+    branches:
+
+      - main  # 或者你想要触发工作流程的分支
+
+  pull_request:
+
+    branches:
+
+      - main  # 或者你想要触发工作流程的分支
+
+  workflow_dispatch:  # 手动触发工作流程
 
 jobs:
-  build:
+
+  build-and-publish:
 
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      - name: Checkout code
 
-    - name: Publish to GitHub Packages Apache Maven
-      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
+        uses: actions/checkout@v2
+
+      - name: Set up JDK
+
+        uses: actions/setup-java@v2
+
+        with:
+
+          java-version: '11'  # 或者你想要使用的 Java 版本
+
+      - name: Build and publish
+
+        run: |
+
+          ./gradlew clean build publishToMavenLocal
+
+      - name: Manual approval
+
+        if: github.event_name == 'workflow_dispatch'
+
+        uses: stefanzweifel/git-auto-approve-action@v2.3.0
+
+        with:
+
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+
+
+    
