--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -1,46 +1,31 @@
 name: Gradle Package
 
 on:
-
   release:
-
     types: [created]
+  workflow_dispatch: # 添加手动运行的触发器
 
 jobs:
-
   build:
 
     runs-on: ubuntu-latest
-
     permissions:
-
       contents: read
-
       packages: write
 
     steps:
-
     - uses: actions/checkout@v3
 
     - name: Set up JDK 17
-
       uses: actions/setup-java@v3
-
       with:
-
         java-version: '17'
 
     - name: Build with Gradle
-
       run: ./gradlew build
 
     - name: Publish to GitHub Packages
-
       run: ./gradlew publish
-
       env:
-
         USERNAME: ${{ github.actor }}
-
         TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
