--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -3,7 +3,12 @@ name: Gradle Package
 on:
   release:
     types: [created]
-  workflow_dispatch: # 添加手动运行的触发器
+  workflow_dispatch:
+    inputs:
+      distribution:
+        description: 'Distribution name'
+        required: true
+        default: 'unspecified'
 
 jobs:
   build:
@@ -25,7 +30,7 @@ jobs:
       run: ./gradlew build
 
     - name: Publish to GitHub Packages
-      run: ./gradlew publish
+      run: ./gradlew publish -Pdistribution=${{ github.event.inputs.distribution }}
       env:
         USERNAME: ${{ github.actor }}
         TOKEN: ${{ secrets.GITHUB_TOKEN }}
