--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -4,11 +4,6 @@ on:
   release:
     types: [created]
   workflow_dispatch:
-    inputs:
-      distribution:
-        description: 'Distribution name'
-        required: true
-        default: 'unspecified'
 
 jobs:
   build:
@@ -30,8 +25,7 @@ jobs:
       run: ./gradlew build
 
     - name: Publish to GitHub Packages
-      run: ./gradlew publish -Pdistribution=$DISTRIBUTION
+      run: ./gradlew publish
       env:
-        DISTRIBUTION: ${{ github.event.inputs.distribution }}
         USERNAME: ${{ github.actor }}
         TOKEN: ${{ secrets.GITHUB_TOKEN }}
