--- a/.github/workflows/gradle-publish3.yml
+++ b/.github/workflows/gradle-publish3.yml
@@ -24,7 +24,11 @@ jobs:
       uses: actions/setup-java@v3
       with:
         java-version: '11'
-        distribution: 'temurin'
+        
+        distribution: 'adopt'
+        server-id: ossrh
+        server-username: USERNAME
+        server-password: TOKEN
         
     - name: Build with Gradle
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
